[package]
name = "tiny-agent-loop"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "A tiny LLM agent loop library for simple one-off projects with LLMs."

[dependencies]
async-openai = { version = "0.33.1", features = ["chat-completion"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
futures-util = "0.3.32"
log = "0.4.29"

[dev-dependencies]
env_logger = "0.11.10"
tokio = { version = "1.51.0", features = ["rt-multi-thread"] }
